our founder section complete

--- a/about-us.html
+++ b/about-us.html
@@ -291,6 +291,57 @@
         </div>
     </section>
     <!-- our founder section ---------------------------------------------  -->
+    <section id="founder">
+        <div class="container">
+            <!-- founder wrapper  -->
+            <article class="founder-wrapper bg-white">
+                <!-- tittle  -->
+                <div class="f-tittle">
+                    <p class="description-2 yellow mb-0">Our Founder's</p>
+                    <h1 class="high-2">Manifesto</h1>
+                </div>
+                <!-- founder description  -->
+                <p class="big-para mt-3 mt-lg-4">Hi, I'm Jeremy, CEO here at unipoint</p>
+                <!-- img  -->
+                <div class="img__wrap mt-3">
+                    <img class="w-xs-100" src="./img/about-us/founder/founder.png" alt="unipoint ceo image">
+                </div>
+                <!-- article wrapper  -->
+                <div class="mt-3 mt-md-4">
+                    <p class="big-para">I was born in California and grew up in a small town in Arkansas.</p>
+                    <p class="big-para">My first encounter with computers was a commodore 64. I instantly fell in love with it and quickly found myself obsessively reading manuals and learning all I could. </p>
+                    <p class="big-para">Years later, while getting my computer science degree,  I noticed that IT experts are notorious for being technically arrogant. </p>
+                    <p class="big-para">I quickly decided that our mission here at unipoint should be to go against this pattern. </p>
+                    <p class="big-para">We're always looking to build long-lasting relationships with all of our clients. It's very important for us to have genuine interest and care for  IT problems. We strive to make every interaction respectful,  easy, and comfortable. </p>
+                    <p class="big-para">Advanced technology does not exist in a vacuum, it is connected to real people, real businesses. You are hiring experts who use technology to help solve real business problems, without talking down to you. </p>
+                    <p class="big-para">It may sound cliche, but my thirst for knowledge and passion for technology drives unipoint. It’s our duty and responsibility to stay ahead of the curve for all our clients. </p>
+                    <p class="big-para">IT should not be a burden. It’s simply a wise way to enable future innovation and stability for your business.</p>
+                </div>
+                <!-- signature  -->
+                <div class="signature mt-4 mt-md-5">
+                    <h2 class="high-4">IT deserves a renovation</h2>
+                    <div class="description d-flex flex-column flex-lg-row">
+                        <!-- left section  -->
+                        <div class="left">
+                            <p class="description-1">A modernized way to prevent avoidable</p>
+                            <p class="description-1">problems and a smart way to</p>
+                            <p class="description-1">enable business goals.</p>
+                        </div>
+                        <!-- right section  -->
+                        <div class="right text-center pt-5 pt-lg-0 mt-md-0 d-lg-flex align-items-lg-center">
+                            <img class="d-inline-block" src="./img/about-us/founder/signature.png" alt="signature image">
+                        </div>
+                    </div>
+                </div>
+                <!--  email form  -->
+                <div class="email__form mt-5 d-flex flex-column mt-3 flex-sm-row w-lg-58 w-xl-52 w-xxl-65 mt-lg-4">
+                    <!-- email input  -->
+                    <input class="w-xs-100 form-control bg-white text-dark-500 text-capitalize medium" type="email" value="" placeholder="Your Email">
+                    <button class="btn cus__btn w-xs-100 mt-2 mt-sm-0 text-capitalize">60 min fee consultation</button>
+                </div>
+            </article>
+        </div>
+    </section>
     <!-- ---------------------------------------- footer section   ----------------------------------------  -->
     <footer id="footer">
         <div class="container py-5">
