why work with us card complete lg section

--- a/about-us.html
+++ b/about-us.html
@@ -342,6 +342,152 @@
             </article>
         </div>
     </section>
+    <!-- why work with us section --------------------------------------------------->
+    <section id="whyWorkWithUs">
+        <div class="container">
+            <!-- tittle  -->
+            <div class="tittle">
+                <h1 class="high-2 text-center">Why Work with Us?</h1>
+                <p class="text-center description-2">Make IT a simpler, pleasant and much more productive experience.</p>
+            </div>
+            <!-- card wrapper  -->
+            <div class="card-wrapper-list">
+                <!-- card  -->
+                <aside class="sq-big-card peace">
+                    <!-- icon  -->
+                    <div class="icon_wrap text-center text-md-start">
+                        <img class="d-inline-block" src="./img/about-us/workWithUs/peace-in-mind.svg" alt="peace in mind icon">
+                    </div>
+                    <!-- heading  -->
+                    <div class="heading mt-3">
+                        <h6 class="mb-0 text-center text-md-start text-white text-capitalize semiBold">Peace of Mind</h6> 
+                    </div>
+                    <!-- paragraph  -->
+                    <div class="para_wrap mt-2">
+                        <p class="mb-0 text-center text-md-start text-white regular">Minimize downtime via high availability solutions, for critical services.</p>
+                    </div>
+                </aside>
+                <!-- card  -->
+                <aside class="sq-big-card declutter">
+                    <!-- icon  -->
+                    <div class="icon_wrap text-center text-md-start">
+                        <img class="d-inline-block" src="./img/about-us/workWithUs/decutta.svg" alt="deculutter icon">
+                    </div>
+                    <!-- heading  -->
+                    <div class="heading mt-3">
+                        <h6 class="mb-0 text-center text-md-start text-white text-capitalize semiBold">declutter</h6>                        </div>
+                    <!-- paragraph  -->
+                    <div class="para_wrap mt-2">
+                        <p class="mb-0 text-center text-md-start text-white regular">Move local servers from office to datacenter or cloud.</p>
+                    </div>
+                </aside>
+                <!-- card  -->
+                <aside class="sq-big-card modernize">
+                    <!-- icon  -->
+                    <div class="icon_wrap text-center text-md-start">
+                        <img class="d-inline-block" src="./img/about-us/workWithUs/modenizer.svg" alt="modernizer icon">
+                    </div>
+                    <!-- heading  -->
+                    <div class="heading mt-3">
+                        <h6 class="mb-0 text-center text-md-start text-dark text-capitalize semiBold">modernize</h6>                        </div>
+                    <!-- paragraph  -->
+                    <div class="para_wrap mt-2">
+                        <p class="mb-0 text-center text-md-start text-dark regular">Virtualize most infrastructure.</p>
+                    </div>
+                </aside>
+                <!-- card  -->
+                <aside class="sq-big-card saveTime flex-lg-nowrap">
+                    <!-- icon  -->
+                    <div class="icon_wrap text-center text-md-start">
+                        <img class="d-inline-block" src="./img/about-us/workWithUs/save-time.svg" alt="save time icon">
+                    </div>
+                    <!-- heading  -->
+                    <div class="heading mt-3">
+                        <h6 class="mb-0 text-center text-md-start text-white text-capitalize semiBold">save time</h6>
+                    </div>
+                    <!-- paragraph  -->
+                    <div class="para_wrap mt-2">
+                        <p class="mb-0 text-center text-md-start text-white regular">Transitioning from on-premise Line Of Business software to modern SaaS solutions.</p>
+                    </div>
+                </aside>
+                <!-- card  -->
+                <aside class="sq-big-card organization flex-lg-nowrap">
+                    <!-- icon  -->
+                    <div class="icon_wrap text-center text-md-start">
+                        <img class="d-inline-block" src="./img/about-us/workWithUs/organization.svg" alt="organization icon">
+                    </div>
+                    <!-- heading  -->
+                    <div class="heading mt-3">
+                        <h6 class="mb-0 text-center text-md-start text-dark text-capitalize semiBold">organization</h6>
+                    </div>
+                    <!-- paragraph  -->
+                    <div class="para_wrap mt-2">
+                        <p class="mb-0 text-center text-md-start text-dark regular">Migrating customers from on-premise mail servers to office 365.</p>
+                    </div>
+                </aside>
+                <!-- card  -->
+                <aside class="sq-big-card support flex-lg-nowrap">
+                    <!-- icon  -->
+                    <div class="icon_wrap text-center text-md-start">
+                        <img class="d-inline-block" src="./img/about-us/workWithUs/support.svg" alt="support icon">
+                    </div>
+                    <!-- heading  -->
+                    <div class="heading mt-3">
+                        <h6 class="mb-0 text-center text-md-start text-dark text-capitalize semiBold">support</h6>
+                    </div>
+                    <!-- paragraph  -->
+                    <div class="para_wrap mt-2">
+                        <p class="mb-0 text-center text-md-start text-dark regular">Get your questions answered swiftly, via our friendly Helpdesk.</p>
+                    </div>
+                </aside>
+                <!-- card  -->
+                <aside class="sq-big-card proactive flex-lg-nowrap">
+                    <!-- icon  -->
+                    <div class="icon_wrap text-center text-md-start">
+                        <img class="d-inline-block" src="./img/about-us/workWithUs/proactive.svg" alt="proactive icon">
+                    </div>
+                    <!-- heading  -->
+                    <div class="heading mt-3">
+                        <h6 class="mb-0 text-center text-md-start text-white text-capitalize semiBold">proactive</h6>
+                    </div>
+                    <!-- paragraph  -->
+                    <div class="para_wrap mt-2">
+                        <p class="mb-0 text-center text-md-start text-white regular">Respond and resolve issues via automated alerts.</p>
+                    </div>
+                </aside>
+                <!-- card  -->
+                <aside class="sq-big-card prepared flex-lg-nowrap">
+                    <!-- icon  -->
+                    <div class="icon_wrap text-center text-md-start">
+                        <img class="d-inline-block" src="./img/about-us/workWithUs/prepared.svg" alt="prepared icon">
+                    </div>
+                    <!-- heading  -->
+                    <div class="heading mt-3">
+                        <h6 class="mb-0 text-center text-md-start text-dark text-capitalize semiBold">prepared</h6>
+                    </div>
+                    <!-- paragraph  -->
+                    <div class="para_wrap mt-2">
+                        <p class="mb-0 text-center text-md-start text-dark regular">Anti-Virus, Malware and Security solutions.</p>
+                    </div>
+                </aside>
+                <!-- card  -->
+                <aside class="sq-big-card speed flex-lg-nowrap">
+                    <!-- icon  -->
+                    <div class="icon_wrap text-center text-md-start">
+                        <img class="d-inline-block" src="./img/about-us/workWithUs/speed.svg" alt="speed icon">
+                    </div>
+                    <!-- heading  -->
+                    <div class="heading mt-3">
+                        <h6 class="mb-0 text-center text-md-start text-dark text-capitalize semiBold">speed</h6>
+                    </div>
+                    <!-- paragraph  -->
+                    <div class="para_wrap mt-2">
+                        <p class="mb-0 text-center text-md-start text-dark regular">Typical response time to issues is under 15 minutes.</p>
+                    </div>
+                </aside>
+            </div>
+        </div>
+    </section>
     <!-- ---------------------------------------- footer section   ----------------------------------------  -->
     <footer id="footer">
         <div class="container py-5">
