brand section complete

--- a/about-us.html
+++ b/about-us.html
@@ -488,6 +488,64 @@
             </div>
         </div>
     </section>
+    <!-- proud partnership  -->
+    <section id="proudPartnership">
+        <div class="container">
+            <!-- tittle  -->
+            <div class="tittle">
+                <h1 class="high-2 text-center text-capitalize">proud partnership</h1>
+                <p class="description-2 text-center">Who we're working with</p>
+            </div>
+            <!-- top company list  -->
+            <div class="top-brand-list d-flex justify-content-between mx-auto">
+                <!-- brand  -->
+                <div class="brand-wrap">
+                    <img src="./img/about-us/brand/dell.png" alt="dell icon">
+                </div>
+                <!-- brand  -->
+                <div class="brand-wrap">
+                    <img src="./img/about-us/brand/net.png" alt=".net icon">
+                </div>
+                <!-- brand  -->
+                <div class="brand-wrap">
+                    <img src="./img/about-us/brand/black-point.png" alt="black-point icon">
+                </div>
+            </div>
+            <!-- brand list  -->
+            <div class="bottom-brand-list mt-3 mt-md-4">
+                <div class="brand-wrap">
+                    <img src="./img/about-us/brand/aws services.png" alt="amazon service">
+                </div>
+                <div class="brand-wrap">
+                    <img src="./img/about-us/brand/microsoft partner.png" alt="microsoft partners">
+                </div>
+                <div class="brand-wrap sm">
+                    <img src="./img/about-us/brand/veem.png" alt="veeam icon">
+                </div>
+                <div class="brand-wrap sm">
+                    <img src="./img/about-us/brand/treand.png" alt="trend micro icon">
+                </div>
+                <div class="brand-wrap">
+                    <img src="./img/about-us/brand/sentinel.png" alt="sentinel icon">
+                </div>
+                <div class="brand-wrap">
+                    <img src="./img/about-us/brand/google.png" alt="google icon">
+                </div>
+                <div class="brand-wrap">
+                    <img src="./img/about-us/brand/barracuda.png" alt="barracuda icon">
+                </div>
+                <div class="brand-wrap">
+                    <img src="./img/about-us/brand/lenovo.png" alt="lenovo icon">
+                </div>
+                <div class="brand-wrap">
+                    <img src="./img/about-us/brand/huntsman.png" alt="huntsman icon">
+                </div>
+                <div class="brand-wrap chisco">
+                    <img src="./img/about-us/brand/chisco.png" alt="chisco icon">
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- ---------------------------------------- footer section   ----------------------------------------  -->
     <footer id="footer">
         <div class="container py-5">
