list section complete

--- a/about-us.html
+++ b/about-us.html
@@ -546,6 +546,50 @@
             </div>
         </div>
     </section>
+    <!------------------------------------ read the latest news section  ----------------------------->
+    <section id="readTheLatestNews">
+        <div class="container">
+            <div class="card-container w-lg-95 w-xl-93">
+                <!-- tittle  -->
+                <div class="tittle d-flex justify-content-between">
+                    <h1 class="high-3">Read the Latest News</h1>
+                    <a href="" class="description-2 text-capitalize text-blue">all news</a>
+                </div>
+                <!-- card container  -->
+                <div class="card_wrap d-flex flex-column flex-md-row justify-content-md-between">
+                    <!-- card  -->
+                    <aside class="card-square">
+                        <!-- heading  -->
+                        <div class="heading mt-2">
+                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">How to prepare for</h6>
+                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">an IT audit, today.</h6>
+                        </div>
+                        <!-- paragraph  -->
+                        <div class="para_wrap mt-3">
+                            <p class="mb-0 sm_para text-start text-white regular">We recommend you avoid depending solely on other industry blogs for inspiration, and consider your own past content as well.</p>
+                        </div>
+                        <!-- links section  -->
+                        <a href="" class="para text-capitalize yellow mt-3 medium">read article</a>
+                    </aside>
+                    <!-- card  -->
+                    <aside class="card-square">
+                        <!-- heading  -->
+                        <div class="heading mt-2">
+                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">10 brand-new Ways to</h6>
+                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">Reduce Phishing</h6>
+                        </div>
+                        <!-- paragraph  -->
+                        <div class="para_wrap mt-3">
+                            <p class="mb-0 sm_para text-start text-white regular">We recommend you avoid depending solely on other industry blogs for inspiration, and consider your own past content as well.</p>
+                        </div>
+                        <!-- links section  -->
+                        <a href="" class="para text-capitalize yellow mt-3 medium">read article</a>
+                    </aside>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- ---------------------------------------- footer section   ----------------------------------------  -->
     <footer id="footer">
         <div class="container py-5">
