header/main all complete with bg

--- a/about-us.html
+++ b/about-us.html
@@ -11,133 +11,135 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body class="about-us">
-    <!-- border-top  -->
-    <div id="border__top"></div>
-    <!-- header section  ------------------------->
-    <header>
-                <!-- navbar  -->
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <div class="container py-4">
-                            <a class="navbar-brand d-flex" href="#">
-                                <img src="./img/brand.svg" alt="brand icon">
-                                <div class="text__wrap d-flex flex-column">
-                                    <p class="para mb-0 semiBold">Smarter</p>
-                                    <p class="para mb-0 semiBold">Safer IT</p>
-                                </div>
-                            </a>
-                            <!-- toggle button  -->
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
-                                <div class="navbar-icon">
-                                    <img src="./img/icon/dots-menu.png" alt="dot menu">
-                                </div>
-                            </button>
-                            <!-- navbar list  -->
-                            <div class="collapse navbar-collapse justify-content-end flex-grow-0 w-lg-65 w-xl-60 w-xxl-55" id="topNavbar">
-                                <ul class="navbar-nav me-auto mb-lg-0 p-4 bg-white rounded p-lg-0 flex-fill align-items-lg-center mt-3">
-                                    <!-- nav link  -->
-                                    <li class="nav-item flex-lg-fill text-center">
-                                        <a href="" class="nav-link text-center pt-lg-2">services</a>
-                                    </li>
-                                    <!-- nav link  -->
-                                    <li class="nav-item flex-lg-fill text-center">
-                                        <a href="" class="nav-link text-center pt-lg-2">pricing</a>
-                                    </li>
-                                    <!-- nav link  -->
-                                    <li class="nav-item flex-lg-fill text-center">
-                                        <a href="" class="nav-link text-center pt-lg-2">about</a>
-                                    </li>
-                                    <!-- nav link  -->
-                                    <li class="nav-item flex-lg-fill text-center">
-                                        <a href="" class="nav-link text-center pt-lg-2">coreers</a>
-                                    </li>
-                                    <!-- nav link  -->
-                                    <li class="nav-item text-center d-none d-lg-block">
-                                        <a href="" class="nav-link text-center pt-lg-2 cus__btn">book a free assessment</a>
-                                    </li>
-                                </ul>
+    <div class="headerMainBg">
+        <!-- border-top  -->
+        <div id="border__top"></div>
+        <!-- header section  ------------------------->
+        <header>
+                    <!-- navbar  -->
+                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                        <div class="container py-4">
+                                <a class="navbar-brand d-flex" href="#">
+                                    <img src="./img/brand.svg" alt="brand icon">
+                                    <div class="text__wrap d-flex flex-column">
+                                        <p class="para mb-0 semiBold">Smarter</p>
+                                        <p class="para mb-0 semiBold">Safer IT</p>
+                                    </div>
+                                </a>
+                                <!-- toggle button  -->
+                                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#topNavbar" aria-controls="topNavbar" aria-expanded="false" aria-label="Toggle navigation">
+                                    <div class="navbar-icon">
+                                        <img src="./img/icon/dots-menu.png" alt="dot menu">
+                                    </div>
+                                </button>
+                                <!-- navbar list  -->
+                                <div class="collapse navbar-collapse justify-content-end flex-grow-0 w-lg-65 w-xl-60 w-xxl-55" id="topNavbar">
+                                    <ul class="navbar-nav me-auto mb-lg-0 p-4 bg-white rounded p-lg-0 flex-fill align-items-lg-center mt-3">
+                                        <!-- nav link  -->
+                                        <li class="nav-item flex-lg-fill text-center">
+                                            <a href="" class="nav-link text-center pt-lg-2">services</a>
+                                        </li>
+                                        <!-- nav link  -->
+                                        <li class="nav-item flex-lg-fill text-center">
+                                            <a href="" class="nav-link text-center pt-lg-2">pricing</a>
+                                        </li>
+                                        <!-- nav link  -->
+                                        <li class="nav-item flex-lg-fill text-center">
+                                            <a href="" class="nav-link text-center pt-lg-2">about</a>
+                                        </li>
+                                        <!-- nav link  -->
+                                        <li class="nav-item flex-lg-fill text-center">
+                                            <a href="" class="nav-link text-center pt-lg-2">coreers</a>
+                                        </li>
+                                        <!-- nav link  -->
+                                        <li class="nav-item text-center d-none d-lg-block">
+                                            <a href="" class="nav-link text-center pt-lg-2 cus__btn">book a free assessment</a>
+                                        </li>
+                                    </ul>
+                            </div>
                         </div>
-                    </div>
-                </nav>
-    </header>
-    <!-- main section  ------------------------->
-    <main>
-        <div class="container pb-3 pb-xl-4 pb-xxl-5">
-                <!-- heading and forms  -->
-                <aside class="head_form pb-sm-5 pb-lg-0">
-                    <!-- main heading wrapper  -->
-                    <div class="m_head_wrap mt-lg-1">
-                        <h1 class="high-1 text-capitalize">merging advanced</h1>
-                        <h1 class="high-1 text-capitalize">technology</h1>
-                    </div>
-                    <!-- small heading wrapper  -->
-                    <h2 class="batch-mark-des-big mt-2 mt-lg-3">With Friendly,<span> respectful IT experts. </span></h2>
-                    <!--  email form  -->
-                    <div class="email__form d-flex flex-column mt-3 flex-sm-row w-lg-75 w-xl-78 w-xxl-56 mt-lg-4">
-                        <!-- email input  -->
-                        <input class="w-xs-100 form-control bg-white text-dark-500 text-capitalize medium" type="email" value="" placeholder="Your Email">
-                        <button class="btn cus__btn w-xs-100 mt-2 mt-sm-0 text-capitalize">60 min fee consultation</button>
-                    </div>
-                    <!-- bottom slogan  -->
-                    <div class="slogan__wrap mt-2 mt-lg-3 d-lg-flex">
-                        <p class="para text-end text-blue mb-0">Find out how a typical</p>
-                        <p class="para text-end text-blue mb-0">strategy consultation works.</p>
-                    </div>
-                </aside>
-                <!-- card wrapper  -->
-                <div class="card_wrap">
-                    <!-- card element     -->
-                    <aside class="card-square d-none d-lg-grid">
-                        <!-- icon  -->
-                        <div class="icon_wrap text-left">
-                            <img class="d-inline-block" src="./img/icon/main/graph.png" alt="graph icon">
+                    </nav>
+        </header>
+        <!-- main section  ------------------------->
+        <main>
+            <div class="container pb-3 pb-xl-4 pb-xxl-5">
+                    <!-- heading and forms  -->
+                    <aside class="head_form pb-sm-5 pb-lg-0">
+                        <!-- main heading wrapper  -->
+                        <div class="m_head_wrap mt-lg-1">
+                            <h1 class="high-1 text-capitalize">merging advanced</h1>
+                            <h1 class="high-1 text-capitalize">technology</h1>
                         </div>
-                        <!-- heading  -->
-                        <div class="heading mt-2">
-                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">our promise</h6>                        </div>
-                        <!-- paragraph  -->
-                        <div class="para_wrap mt-1">
-                            <p class="mb-0 sm_para text-left text-white regular">Why unipoint exists</p>
-                            <p class="mb-0 sm_para text-left text-white regular">and our Core</p>
-                            <p class="mb-0 sm_para text-left text-white regular">Values</p>
+                        <!-- small heading wrapper  -->
+                        <h2 class="batch-mark-des-big mt-2 mt-lg-3">With Friendly,<span> respectful IT experts. </span></h2>
+                        <!--  email form  -->
+                        <div class="email__form d-flex flex-column mt-3 mt-lg-4 flex-sm-row w-lg-75 w-xl-78 w-xxl-80 mt-lg-4">
+                            <!-- email input  -->
+                            <input class="w-xs-100 email-dark form-control bg-white text-dark-500 text-capitalize medium" type="email" value="" placeholder="Your Email">
+                            <button class="btn cus__btn w-xs-100 mt-2 mt-sm-0 text-capitalize">60 min fee consultation</button>
+                        </div>
+                        <!-- bottom slogan  -->
+                        <div class="slogan__wrap mt-2 mt-lg-3 d-lg-flex">
+                            <p class="para text-end text-blue mb-0">Find out how a typical</p>
+                            <p class="para text-end text-blue mb-0">strategy consultation works.</p>
                         </div>
                     </aside>
-                    <!-- card element     -->
-                    <aside class="card-square d-none d-lg-grid">
-                        <!-- icon  -->
-                        <div class="icon_wrap text-left">
-                            <img class="d-inline-block" src="./img/icon/main/resize.png" alt="resize icon">
-                        </div>
-                        <!-- heading  -->
-                        <div class="heading mt-2">
-                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">our founder's</h6>
-                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">manifesto</h6>
-                        </div>
-                        <!-- paragraph  -->
-                        <div class="para_wrap mt-1">
-                            <p class="mb-0 sm_para text-left text-white regular">our founder's</p>
-                            <p class="mb-0 sm_para text-left text-white regular">mission and vision</p>
-                        </div>
-                    </aside>
-                    <!-- card element     -->
-                    <aside class="card-square d-none d-lg-grid">
-                        <!-- icon  -->
-                        <div class="icon_wrap text-left">
-                            <img class="d-inline-block" src="./img/icon/main/web-apps.png" alt="graph icon">
-                        </div>
-                        <!-- heading  -->
-                        <div class="heading mt-2">
-                            <h6 class="mb-0 text-left text-white text-capitalize semiBold">why work with us</h6>
-                        </div>
-                        <!-- paragraph  -->
-                        <div class="para_wrap mt-1">
-                            <p class="mb-0 sm_para text-left text-white regular">some of the benifits</p>
-                            <p class="mb-0 sm_para text-left text-white regular">you'll get for working</p>
-                            <p class="mb-0 sm_para text-left text-white regular">with us as a client's</p>
-                        </div>
-                    </aside>
-                </div>
-        </div>
-    </main>
+                    <!-- card wrapper  -->
+                    <div class="card_wrap">
+                        <!-- card element     -->
+                        <aside class="card-square d-none d-lg-grid">
+                            <!-- icon  -->
+                            <div class="icon_wrap text-left">
+                                <img class="d-inline-block" src="./img/icon/main/graph.png" alt="graph icon">
+                            </div>
+                            <!-- heading  -->
+                            <div class="heading mt-2">
+                                <h6 class="mb-0 text-left text-white text-capitalize semiBold">our promise</h6>                        </div>
+                            <!-- paragraph  -->
+                            <div class="para_wrap mt-1">
+                                <p class="mb-0 sm_para text-left text-white regular">Why unipoint exists</p>
+                                <p class="mb-0 sm_para text-left text-white regular">and our Core</p>
+                                <p class="mb-0 sm_para text-left text-white regular">Values</p>
+                            </div>
+                        </aside>
+                        <!-- card element     -->
+                        <aside class="card-square d-none d-lg-grid">
+                            <!-- icon  -->
+                            <div class="icon_wrap text-left">
+                                <img class="d-inline-block" src="./img/icon/main/resize.png" alt="resize icon">
+                            </div>
+                            <!-- heading  -->
+                            <div class="heading mt-2">
+                                <h6 class="mb-0 text-left text-white text-capitalize semiBold">our founder's</h6>
+                                <h6 class="mb-0 text-left text-white text-capitalize semiBold">manifesto</h6>
+                            </div>
+                            <!-- paragraph  -->
+                            <div class="para_wrap mt-1">
+                                <p class="mb-0 sm_para text-left text-white regular">our founder's</p>
+                                <p class="mb-0 sm_para text-left text-white regular">mission and vision</p>
+                            </div>
+                        </aside>
+                        <!-- card element     -->
+                        <aside class="card-square d-none d-lg-grid">
+                            <!-- icon  -->
+                            <div class="icon_wrap text-left">
+                                <img class="d-inline-block" src="./img/icon/main/web-apps.png" alt="graph icon">
+                            </div>
+                            <!-- heading  -->
+                            <div class="heading mt-2">
+                                <h6 class="mb-0 text-left text-white text-capitalize semiBold">why work with us</h6>
+                            </div>
+                            <!-- paragraph  -->
+                            <div class="para_wrap mt-1">
+                                <p class="mb-0 sm_para text-left text-white regular">some of the benifits</p>
+                                <p class="mb-0 sm_para text-left text-white regular">you'll get for working</p>
+                                <p class="mb-0 sm_para text-left text-white regular">with us as a client's</p>
+                            </div>
+                        </aside>
+                    </div>
+            </div>
+        </main>
+    </div>
     <!-- our north star --------------------------------->
     <section id="ourNorthStar">
         <div class="container">
